--- a/Dr Angela/CSS - My Site/CSS/styles.css
+++ b/Dr Angela/CSS - My Site/CSS/styles.css
@@ -1,57 +1,144 @@
+html {
+  height: 100%;
+  margin: 0;
+}
 body {
-    margin: 0;
-    text-align: center;
-    font-family: serif;
+  margin: 0;
+  text-align: center;
+  font-family: serif;
+  color: #40514e;
+  height: 100%;
 }
-h1{
-    margin: 50px auto 0 auto;
-    font-family: 'Hachi Maru Pop', cursive;
-    font-size: 5.265rem;
-    color: #66BFBF;
-    line-height: 2;
+h1 {
+  margin: 50px auto 0 auto;
+  font-family: "Hachi Maru Pop", cursive;
+  font-size: 5.265rem;
+  color: #66bfbf;
+  line-height: 2;
 }
-h2{
-    font-size: 2.5rem;
-    color: #66BFBF;
+h2 {
+  font-size: 2.5rem;
+  color: #66bfbf;
+  padding-bottom: 10px;
+  font-family: "Montserrat", sans-serif;
 }
-h3{
-    color: #11999E;
+h3 {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
 }
-a{
-    color: #11999E;
+a {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
 }
-span{
-    text-decoration: underline;
+a:hover {
+  color: #eaf6f6;
+}
+span {
+  text-decoration: underline;
+}
+p {
+  line-height: 2;
+  font-family: "Montserrat", sans-serif;
 }
 .top-container {
-    background-color: #e4f9f5;
-    position: relative;
-    padding-top: 50px;
+  background-color: #eaf6f6;
+  position: relative;
+  padding-top: 50px;
 }
-.top-cloud{
-    position: absolute;
-    right: 25%;
+.top-cloud {
+  position: absolute;
+  right: 10%;
 }
-.bottom-cloud{
-    position: absolute;
-    left: 25%;
+.bottom-cloud {
+  position: absolute;
+  left: 10%;
 }
-.middle-container{
+.middle-container {
+  margin: 100px 0;
+}
+.meDescription {
+  width: 30%;
+  margin: auto;
+}
+hr {
+  border-top: 6px dotted #e4f9f5;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+.bottom-container {
+  background-color: #66bfbf;
+  padding: 40px 0 10px;
+}
 
+.subheading {
+  font-weight: normal;
 }
-.bottom-container{
+.mePic {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+.imgSkills1 {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  float: left;
+  margin-right: 30px;
+}
+.imgSkills2 {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  float: right;
+  margin-right: 30px;
+}
 
+.skill-row1 {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+.skill-row2 {
+  padding-top: 20px;
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+.contact {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+.copyright {
+  color: #eaf6f6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 
-.subheading{
-    font-weight: normal;
-}
-.mePic{
-    border-radius: 50%;
-    height: 300px;
-    width: 300px;
-}
-.imgSkills{
-    height: 200px;
-    width: 200px;
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
